--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,8 @@
-.main-buttons-container {
+:global .picker.picker-dialog {
+  z-index: 900002;
+}
+
+.mainButtonsContainer {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -11,11 +15,11 @@
   transition: transform 300ms ease-in-out;
 }
 
-.main-buttons-container-submerged {
+.mainButtonsContainerSubmerged {
   transform: translateY(100%);
 }
 
-.main-buttons-container-handle {
+.mainButtonsContainerHandle {
   position: absolute;
   top: -21px;
   left: 4px;
@@ -27,7 +31,7 @@
   cursor: pointer;
 }
 
-.main-buttons-container-handle::before {
+.mainButtonsContainerHandle::before {
   content: '';
   display: block;
   border: 6px solid transparent;
@@ -37,41 +41,41 @@
   transform: translate(4px, 1px);
 }
 
-.main-buttons-container-messages {
+.mainButtonsContainerMessages {
   height: 20px;
 }
 
-.ct-message--info {
+.messageInfo {
   color: #000;
 }
 
-.ct-message--error {
+.messageError {
   color: crimson;
 }
 
-.ct-message--success {
+.messageSuccess {
   color: seagreen;
 }
 
-.main-buttons-container button + button {
+.mainButtonsContainer button + button {
   margin-left: 8px;
 }
 
-.main-buttons-container svg {
+.mainButtonsContainer svg {
   display: block;
 }
 
-.main-buttons-container--busy .ct-add-screening-notes-button,
-.main-buttons-container--busy .ct-add-tech-interview-notes-button {
+.mainButtonsContainerBusy .addScreeningNotesButton,
+.mainButtonsContainerBusy .addTechInterviewNotesButton {
   filter: grayscale(0.8);
   pointer-events: none;
 }
 
-.buttons-wrap {
+.buttonsWrap {
   display: flex;
 }
 
-.candidate-templates-settings-modal {
+.candidateTemplatesSettingsModal {
   position: fixed;
   top: 0;
   left: 0;
@@ -82,7 +86,7 @@
   display: flex;
 }
 
-.candidate-templates-settings-modal-content {
+.candidateTemplatesSettingsModalContent {
   width: 640px;
   height: 90vh;
   background: #fff;
@@ -94,7 +98,7 @@
   position: relative;
 }
 
-.ct-button {
+.button {
   background: #3c97e7;
   color: #fff;
   border: none;
@@ -117,13 +121,13 @@
   user-select: none;
 }
 
-.entries-container {
+.entriesContainer {
   flex: 1;
   overflow-y: auto;
 }
 
 .entry,
-.screening-notes-row {
+.screeningNotesRow {
   margin-bottom: 48px;
   border-radius: 8px;
   padding: 16px;
@@ -133,39 +137,31 @@
   border: 1px solid #dfe3e8;
 }
 
-.entry-row {
+.entryRow {
   display: flex;
   flex-direction: column;
   margin-bottom: 16px;
 }
 
-.authorization-buttons-container {
+.authorizationButtonsContainer {
   text-align: right;
   font-size: 10px;
   margin-top: 16px;
 }
 
-.candidate-templates-error button {
-  background-color: red;
-}
-
-.picker.picker-dialog {
-  z-index: 900002;
-}
-
-.entry-input-with-picker {
+.entryInputWithPicker {
   display: flex;
 }
 
-.entry-input-with-picker input {
+.entryInputWithPicker input {
   flex: 1;
 }
 
-.choose-button {
+.chooseButton {
   margin-left: 8px;
 }
 
-.close-icon {
+.closeIcon {
   text-align: center;
   display: inline-flex;
   transform: rotate(45deg);
@@ -176,7 +172,7 @@
   color: #fff;
 }
 
-.close-icon-content {
+.closeIconContent {
   cursor: pointer;
   position: relative;
   display: inline-block;
@@ -187,16 +183,16 @@
   height: 20px;
 }
 
-.close-icon-content:before {
+.closeIconContent:before {
   transform: translateX(-50%);
 }
 
-.close-icon-content:after {
+.closeIconContent:after {
   transform: translateX(-50%) rotate(90deg);
 }
 
-.close-icon-content:after,
-.close-icon-content:before {
+.closeIconContent:after,
+.closeIconContent:before {
   display: block;
   position: absolute;
   top: 0;
@@ -208,6 +204,6 @@
   width: 4px;
 }
 
-.add-entry-button {
+.addEntryButton {
   margin-bottom: 4px;
 }
